--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ ext {
     javaxAnnotationVersion = "1.2"
     torrentstreamVersion = '2.3.0'
     androidJobVersion = '1.1.9'
+    rxjavaVersion = '2.0.9'
 }
 
 allprojects {
